Add web support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,12 @@ readme = "README.md"
 repository = "https://github.com/SarthakSingh31/bevy_4x_camera"
 
 [dependencies]
-bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
 # bevy = "0.5"
+bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "main", default-features = false, features = ["render"] }
 
 [dev-dependencies]
-bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking", branch = "master" }
-rand = "0.8"
+bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking.git" }
+# bevy_mod_picking = "0.3.5"
+# Panics on web without these.
+rand = { version = "0.7.0" }
+getrandom = { version = "0.1", features = ["wasm-bindgen"] }
